--- a/post.html
+++ b/post.html
@@ -151,7 +151,7 @@
   custom components built from scratch, HTML’s built-in accessibility is often
   stripped out. By writing semantically and contextually appropriate markup to
   build simple to complex UI components, teams will automatically benefit from
-  the built in functionality and rendering provided by user agents. Don’t get me
+  the built-in functionality and rendering provided by user agents. Don’t get me
   wrong. I’m not saying that custom components a bad thing. But custom
   components should maintain as many of their native HTML accessibility
   attributes as possible. In fact, many of the JavaScript frameworks such as
